--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+body {
+  background-color: red;
+}
 :root {
   --green: #2e8b57;
   --light-green: #e9f6ef;
@@ -356,4 +359,5 @@ footer {
   background: #f1f1f1;
   color: var(--grey);
 }
+
 
